Fix z-index issue in navbar for mobile layout

--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ body {
   background-color: var(--white-color);
   position: fixed;
   width: 100%;
+  z-index: 10;
 }
 
 .Navbar-button {
